--- a/index.html
+++ b/index.html
@@ -5,6 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Webpage</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+    padding: 0;
+    margin: 0;
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+}
+.nav-links a{
+    text-decoration: none;
+    color: black;
+    font-weight: 500px;
+    margin: 20px;
+}
+.hero{
+    height: 90vh;
+    background: url(/mac.jpg);
+    display: flex;
+    color: white;
+    align-items: center;
+    text-align: left;
+    padding: 20px;
+}
+.hero-content h1{
+    font-size: 50px;
+}
+.hero-content p{
+    font-size: 20px;
+}
+.hero-content button{
+    padding: 10px;
+    background-color: azure;
+    border-radius: 50px;
+    border: none;
+}
+.about{
+    padding: 20px;
+    color: rgb(44, 43, 43);
+}
+.footer{
+    background-color: rgb(60, 59, 59);
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+    </style>
 </head>
 <body>
     <!--Header section-->
@@ -38,4 +87,5 @@
         <p>Copyright 2025 Myfirstproject. All rights reserved.</p>
     </div>
 </body>
+
 </html>
